--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "react": "^15.2.0",
+    "react-addons-transition-group": "^15.2.1",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.5.2",
-    "redux-actions": "^0.10.0"
+    "redux-actions": "^0.10.0",
+    "rx": "^4.1.0"
   }
 }
